<resources>
    <string name="app_name">AdminForQuiz</string>
    <string name="dateCreated">dateCreated</string>
    <string name="dateUpdated">dateUpdated</string>
    <string name="authorID">authorID</string>
    <string name="approverID">approverID</string>
    <string name="ScpNumber">ScpNumber</string>
    <string name="Translation">Translation</string>
    <string name="Phrases">Phrases</string>
    <string name="Approved">Approved</string>
    <string name="editQuiz">Edit Quiz</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="addTranslation">Add Translation</string>
    <string name="addTranslationPhrase">Add Phrase</string>
    <string name="addText">Add Text</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enterText">Enter Text</string>
    <string name="enterLangCode">Enter Language</string>
    <string name="enterDescription">Enter Description</string>
    <string name="createNwQuiz">Create Quiz</string>
    <string name="updateQuizTranslationDescription">Update Description</string>
    <string name="delete">Delete?</string>
    <string name="deleteQuiz">Delete Quiz</string>
    <string name="enterScpNumber">Enter ScpNumber</string>
    <string name="enterImageUrl">Enter Image Url</string>
    <string name="deleteTranslation">Delete Translation</string>
    <string name="deleteTranslationPhrase">Delete Phrase</string>
    <string name="enterTranslationPhrase">Enter Phrase</string>
    <string name="enterTitle">Enter Title</string>
    <string name="enterLogin">Enter Login</string>
    <string name="enterPassword">Enter Password</string>
    <string name="OK">OK</string>
    <string name="authorization">Authorization</string>
    <string name="wrongLogPass">Wrong authorization</string>
    <string name="approve">Approve Quiz?</string>
    <string name="oauthSave">Do you want to save your auth login/password for this application?</string>
    <string name="useOAuth">Use saved login</string>
    <string name="noAuthYet">You dont have it ,yet</string>
    <string name="logout">LogOut</string>
    <string name="http">http</string>
    <string name="goToRegScreen">Registration</string>
    <string name="registration">Registration</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="filter">Filter</string>
    <string name="orConnectWith">Or connect with …</string>
    <string name="enter">Войти</string>
    <string name="registrationRu">Зарегистрироваться</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="scpText">SCP-</string>
    <string name="langTextRu">Язык</string>
    <string name="dateCreatedRu">Дата Создания</string>
    <string name="dateUpdatedRu">Дата Обновления</string>
    <string name="auth">Авторизация</string>
    <string name="server_client_id">854558605045-937t3kgdt9619pumi4s2mgiqs3eeanob.apps.googleusercontent.com</string>
    <integer name="com_vk_sdk_AppId">6736524</integer>
    <string name="vk_key">BQI851DoTMlo8yk6fIzP</string>
    <string name="service_vk_access_key">9b56d7ec9b56d7ec9b56d7ece19b301d6099b569b56d7ecc08eea61380bd08630dc59ec></string>
    <string name="facebook_app_id">1513219612156286</string>
    <string name="fb_login_protocol_scheme">fb1513219612156286</string>
    <string name="byAsc">По возрастанию</string>
    <string name="byDesc">По убыванию</string>
    <string name="filterById">Filter By Id</string>
    <string name="filterByDateUpdated">Filter By Date Updated</string>
    <string name="filterByDateCreated">Filter By Date Created</string>
    <string name="filterByApproved">Filter By Approved</string>
    <string name="nothingSelected">Ничего не выбрано</string>
    <string name="createNwQuizRu">Создать объект</string>
    <string name="enterScpNumberRu">Номер объекта</string>
    <string name="enterImageUrlRu">URL ссылка на изображение</string>
    <string name="textCreateNewObjectRu">Создание нового объекта</string>
    <string name="enterLangCodeRu">Введите код языка</string>
    <string name="enterTitleRu">Введите название объекта</string>
    <string name="enterDescriptionRu">Введите описание объекта</string>
    <string name="enterPhrasesRu">Введите фразы для доктора</string>
    <string name="chooseFilterRu">Выберите фильтр</string>
    <string name="updateQuizTranslationDescriptionRu">Обновить описание</string>
    <string name="addTranslationPhraseRu">Добавить фразу для Доктора</string>
    <string name="enterTranslationPhraseRu">Введите фразу</string>
    <string name="addTranslationRu">Добавить перевод</string>
    <string name="doctorPhrases">Doctor phrases</string>
    <string name="approveTranslation">Approve translation?</string>
    <string name="approvePhrase">Approve phrase?</string>
    <string name="deleteToastText">Вы можете удалять только созданное Вами</string>
    <string name="toastApproveDialog">У вас нет таких прав</string>

    <string-array name="authTabTitles">
        <item>SIGN IN</item>
        <item>SIGN UP</item>
    </string-array>
    <string-array name="toolBarAuthTitles">
        <item>Авторизация</item>
        <item>Регистрация</item>
    </string-array>
</resources>
