<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <!--<TextView-->
        <!--android:id="@+id/tvEnterLangCode"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/enterLangCode"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

    <EditText
        android:id="@+id/etEnterLangCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterLangCode">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEnterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etEnterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEnterDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterDescription"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etEnterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <requestFocus />
    </EditText>

</LinearLayout>